# my-claude

./: .gitignore  .markdownlint.json  CLAUDE.md  README.md  Taskfile.yml  ansible.cfg  pyproject.toml
.github/workflows/: test-deployment.yml
claude-assets/: .mcp.json.j2  CLAUDE.md  settings.yml.j2
claude-assets/rules/: android.md  code-style.md  git.md  ios.md  preferences.md  workflows.md
inventory/default/group_vars/all/: mcp_servers.yml  models.yml  secrets.yml.example  settings.yml
inventory/xyr-config/group_vars/all/: models.yml  secrets.yml.example  settings.yml
my_claude/: __init__.py  __main__.py  cli.py  config.py  models.py  sync.py
playbooks/: setup.yml
playbooks/tasks/: install_cli.yml  manage_single_mcp_server.yml  sync_claude_json_tasks.yml  sync_config_tasks.yml
